<resources>
    <string name="app_name">TraBus</string>
    <string name="underlinetext">
         <u> Already have an account/login</u>
    </string>
    <string name="register">Register</string>
    <string name="upload_image"><u>+ upload image</u></string>
    <string name="sign_in">Sign In</string>
    <string name="Forgett"><u> Forget Password</u></string>
    <string name="login"><u>Don\'t have an account/Signup</u></string>
    <string name="forget_password">Forget<br>Password</br> </string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your \n<br>password</br></string>
    <string name="title_activity_driver_home">Driver_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="close_navigation">Close Navigation</string>
    <string name="open_navigation">Open Navigation</string>

    <string name="menu_home">Home</string>
    <string name="menu_Change_Paswword">Change Paswword</string>
    <string name="menu_Change_Paswword1">Change<br>  Password</br> </string>
    <string name="menu_Change_Paswword2">Make sure you remember your password</string>

    <string name="menu_">Contact</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_logout1">Log out?</string>
    <string name="menu_logout2">Are you sure want to log out?</string>
    <string name="menu_Set_Reminder">Set reminder</string>
    <string name="menu_Chat">Chat</string>
    <string name="bottomsheet">bottom_sheet_behavior</string>
    <string name="complaint_Descrption">Please describe the nature of your complaint including any prior action taken to resolve the complaint.  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <!-- spinner -->
    <string-array name="spinnerlistpickup">
        <item>Select Pickup Location</item>
        <item>Rawalpindi</item>
        <item>Islamabad</item>
        <item>New Campus</item>
        <item>Old Campus</item>

    </string-array>
    <string-array name="spinnerlistdropoff">
        <item>Select Drop Off Location</item>
        <item>Nathia Gali</item>
        <item>Muree</item>
        <item>MuskPuri</item>
        <item>Lahore</item>
        <item>Kashmir</item>
        <item>Kalarkahar</item>
    </string-array>


</resources>