<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Student_Navigation_fragments.ChangePassword">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:background="@drawable/white_backgroun_with_border"
       android:orientation="vertical">
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_openlock"
           android:layout_marginTop="10dp"
           android:layout_gravity="center"
           app:tint="@color/Green"></ImageView>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/menu_Change_Paswword1"
           android:textSize="40sp"
           android:textColor="@color/Green"
           android:gravity="center"
           android:layout_marginTop="15dp"></TextView>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           android:text="@string/menu_Change_Paswword2"
           android:textColor="@color/Green"
           android:textSize="15sp"
           android:layout_marginLeft="10dp"
           android:gravity="center"
           ></TextView>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_old_password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="old password"
             app:hintTextColor="@color/Green"
             app:boxStrokeWidthFocused="2dp"
             app:boxStrokeErrorColor="@color/red"
             app:boxStrokeColor="@color/Green"
             app:counterOverflowTextColor="@color/Green"
             app:boxBackgroundMode="outline"
             app:passwordToggleEnabled="true"
             app:passwordToggleDrawable="@drawable/icon_selector"
             app:passwordToggleTint="@color/Green"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textCursorDrawable="@drawable/style_cursur"
                 android:background="@null"
                 android:backgroundTint="@color/white"
                 android:inputType="textPassword"
                 android:textSize="16sp"
                 android:id="@+id/et_old_password">

             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_new_password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/et_old_password_layout"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:hint="New Password"
             app:hintTextColor="@color/Green"
             app:boxStrokeWidthFocused="2dp"
             app:boxStrokeErrorColor="@color/red"
             app:boxStrokeColor="@color/Green"
             app:counterOverflowTextColor="@color/Green"
             app:boxBackgroundMode="outline"
             app:passwordToggleEnabled="true"
             app:passwordToggleDrawable="@drawable/icon_selector"
             app:passwordToggleTint="@color/Green">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textCursorDrawable="@drawable/style_cursur"
                 android:background="@null"
                 android:backgroundTint="@color/white"
                 android:inputType="textPassword"
                 android:textSize="16sp">

             </com.google.android.material.textfield.TextInputEditText>

         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/et_new_password_layout"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:hint="Confirm Password"
             app:hintTextColor="@color/Green"
             app:boxStrokeWidthFocused="2dp"
             app:boxStrokeErrorColor="@color/red"
             app:boxStrokeColor="@color/Green"
             app:counterOverflowTextColor="@color/Green"
             app:boxBackgroundMode="outline"
             app:passwordToggleEnabled="true"
             app:passwordToggleDrawable="@drawable/icon_selector"
             app:passwordToggleTint="@color/Green">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textCursorDrawable="@drawable/style_cursur"
                 android:background="@null"
                 android:backgroundTint="@color/white"
                 android:inputType="textPassword"
                 android:textSize="16sp">

             </com.google.android.material.textfield.TextInputEditText>

         </com.google.android.material.textfield.TextInputLayout>

     </RelativeLayout>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/menu_Change_Paswword"
               android:layout_marginLeft="30dp"
               android:layout_marginRight="30dp"
               android:layout_marginBottom="30dp"
               android:layout_marginTop="10dp"
               android:textSize="20sp"
               android:textColor="@color/white"
               android:textAllCaps="false"
               android:backgroundTint="@color/Green"></Button>


   </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>