<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".Login.SignIn">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Green"
        android:id="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/leftarrowsignin"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/left_arrow"
                app:tint="@color/white"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:gravity="center" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
        </de.hdodenhof.circleimageview.CircleImageView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:boxStrokeColor="@color/Green"
            android:background="@drawable/white_backgroun_with_border"
            app:boxStrokeErrorColor="@color/red"
            app:boxBackgroundMode="outline"
            app:startIconDrawable="@drawable/email"
            app:counterOverflowTextColor="@color/Green"
            app:hintTextColor="@color/Green"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email or Username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/email_ET"
                android:padding="20dp"
                android:textCursorDrawable="@drawable/style_cursur"
                android:background="@color/white"
                android:gravity="top"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:boxStrokeColor="@color/Green"
            app:boxStrokeErrorColor="@color/red"
            app:boxBackgroundMode="outline"
            android:background="@drawable/white_backgroun_with_border"
            app:startIconDrawable="@drawable/password"
            app:counterOverflowTextColor="@color/Green"
            app:hintTextColor="@color/Green"
            app:boxStrokeWidthFocused="2dp"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password_ET"
                android:padding="20dp"
                android:textCursorDrawable="@drawable/style_cursur"
                android:background="@color/white"
                android:gravity="top"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/forgetsgnin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Forgett"
            android:textColor="@color/Green"
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"></TextView>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radiobtndriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Driver"
                android:textColor="@color/Green"
                android:buttonTint="@color/Green"
                android:textSize="18sp"></RadioButton>
            <RadioButton
                android:layout_marginStart="60dp"
                android:textSize="18sp"
                android:id="@+id/radiobtnstdnt"
                android:textColor="@color/Green"
                android:buttonTint="@color/Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student"></RadioButton>
        </RadioGroup>

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            app:backgroundTint="@color/Green"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/caltosignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Green"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:gravity="center" />

    </LinearLayout>

</RelativeLayout>